Update tmux styles

--- a/stow/.tmux.conf
+++ b/stow/.tmux.conf
@@ -32,11 +32,11 @@ set -g default-terminal "screen-256color"
 set-option -g allow-rename off
 
 # panes
-set -g pane-border-fg cyan
-set -g pane-active-border-fg brightcyan
+set -g pane-border-style fg=cyan
+set -g pane-active-border-style fg=brightcyan
 
 # messaging
-set -g message-bg cyan
+set -g message-style bg=cyan
 
 # status line
 set -g status-bg default
@@ -46,7 +46,7 @@ set -g status-left ''
 
 # window status
 setw -g window-status-format " #W "
-setw -g window-status-bg brightblack
+setw -g window-status-style bg=brightblack
 setw -g window-status-current-format " #W* "
-setw -g window-status-current-bg white
+setw -g window-status-current-style bg=white
 
